--- a/src/app/components/shared/loading/loading.component.html
+++ b/src/app/components/shared/loading/loading.component.html
@@ -1,3 +1,4 @@
+<!--Icono de espera durante la carga-->
 <div class="row text-center animated fadeIn">
     <div class="col">
         <i class="fas fa-sync fa-spin fa-5x"></i>
