--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,11 @@
+<!--Carga el icono de loading si el valor es true-->
 <app-loading *ngIf="loading"></app-loading>
-
+<!--Si error toma el valor de true, se mostrara un mensaje de error y el nombre del mensaje-->
 <div *ngIf="error" class="alert alert-danger animated fadeIn">
     <h3>Error</h3>
     <p>
         {{mensajeError}}
     </p>
 </div>
-
+<!--Se carga la lista de nuevos sensillos-->
 <app-tarjetas [items]="nuevasCanciones"></app-tarjetas>
