--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,10 +1,11 @@
+<!--Barra de busqueda-->
 <div class="row">
     <div class="col">
         <input #termino type="text" (keyup)="buscar(termino.value)" class="form-control" placeholder="Buscar Artistas...">
     </div>
 </div>
-
+<!--Si la infoemación esta cargando, se mostrara el icono de carga mediante la función de loading-->
 <app-loading *ngIf="loading"></app-loading>
 
-
+<!--Si no hay ninfun proceso de carga, se mostraran los listados de artistas-->
 <app-tarjetas *ngIf="!loading" [items]="artistas"></app-tarjetas>
